[tool.poetry]
name = "chessgame"
version = "0.1.0"
description = ""
authors = ["Romain BAUDIN <rbaudin@simco.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
numpy = "^1.24.1"
ipython = "^8.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
